# uaisearch

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-01-api.md  2026-07-01-crawler.md  2026-07-01-deployment.md  2026-07-01-indexer.md  2026-07-01-retrieval.md  2026-07-01-synthesis.md  2026-07-01-ui.md
docs/superpowers/specs/: 2026-07-01-crawler-scope-design.md  2026-07-01-uncensored-search-engine-design.md
scripts/: backfill_common_crawl.py  create_index.py  purge_blocked.py  run_crawler.py
src/uaisearch/: api.py  common_crawl.py  crawler.py  indexer.py  metrics.py  models.py  opensearch_client.py  retrieval.py  synthesis.py
src/uaisearch/static/: chat.css  chat.js
src/uaisearch/templates/: chat.html
tests/: test_api.py  test_common_crawl.py  test_crawler.py  test_dedup.py  test_deployment_config.py  test_index_page.py  test_indexer.py  test_indexer_schema.py  test_models.py  test_opensearch_client.py  test_retrieval.py  test_synthesis.py  test_ui.py
